k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: r-place
  labels:
    app: r-place
    environment: production
